--- a/docs/002-前端/002-javascript/000-记录.md
+++ b/docs/002-前端/002-javascript/000-记录.md
@@ -206,3 +206,153 @@ console.log('script end')
 # 33、cookie 和 token 都存放在 header 中，为什么不会劫持 token？
 
 # 34、数组flatten 
+
+# 35、实现一个 sleep 函数
+```js
+function sleep(time) {
+  return new Promise((resolve) => {
+    setTimeout(resolve, time)
+  })
+}
+
+async function test() {
+  console.log(0)
+  await sleep(1000)
+  console.log(1)
+}
+
+test()
+```
+
+# 36、为什么通常在发送数据埋点请求的时候使用的是 1x1 像素的透明 gif 图片？
+英文术语叫：image beacon。
+一般做法是服务器用一个1x1的gif图片来作为响应，当然这有点浪费服务器资源。因此用header来响应比较合适，目前比较合适的做法是服务器发送"204 No Content"，即“服务器成功处理了请求，但不需要返回任何实体内容”。另外该脚本的位置一般放在页面最后以免阻塞页面渲染,并且一般情况下也不需要append到DOM中。通过它的onerror和onload事件来检测发送状态。
+### 特点
+- 能够完成整个 HTTP 请求+响应（尽管不需要响应内容）
+- 触发 GET 请求之后不需要获取和处理数据、服务器也不需要发送数据
+- 跨域友好
+- 执行过程无阻塞
+- 相比 XMLHttpRequest 对象发送 GET 请求，性能上更好
+- GIF的最低合法体积最小（最小的BMP文件需要74个字节，PNG需要67个字节，而合法的GIF，只需要43个字节）
+- 使用的时候注意图片会有缓存。
+
+# 37、实现 (5).add(3).minus(2) 功能
+```js
+Number.prototype.add = function add(number) {
+  return this.valueOf() + number
+}
+Number.prototype.minus = function minus(number) {
+  return this.valueOf() - number
+}
+
+console.log((5).add(4).minus(1)) // 8
+```
+
+# 38、Vue 的响应式原理中 Object.defineProperty 有什么缺陷？
+
+# 39、sort的默认排序
+
+# 40
+```js
+var a = {n: 1};
+var b = a;
+a.x = a = {n: 2};
+
+console.log(a.x) 	
+console.log(b.x)
+```
+
+# 40、冒泡排序如何实现，时间复杂度是多少， 还可以如何改进？
+
+# 41、某公司 1 到 12 月份的销售额存在一个对象里面
+如下：{1:222, 2:123, 5:888}，请把数据处理为如下结构：[222, 123, null, null, 888, null, null, null, null, null, null, null]。
+
+# 42、Symbol.iterator
+```js
+var arr = [1, 2, 3]
+var iterator = arr[Symbol.iterator]()
+console.log(iterator.next()) // {value: 1, done: false}
+console.log(iterator.next()) // {value: 2, done: false}
+console.log(iterator.next()) // {value: 1, done: false}
+console.log(iterator.next()) // {value: undefined, done: true}
+```
+
+# 43、要求设计 LazyMan 类，实现以下功能。
+```js
+LazyMan('Tony');
+// Hi I am Tony
+
+LazyMan('Tony').sleep(10).eat('lunch');
+// Hi I am Tony
+// 等待了10秒...
+// I am eating lunch
+
+LazyMan('Tony').eat('lunch').sleep(10).eat('dinner');
+// Hi I am Tony
+// I am eating lunch
+// 等待了10秒...
+// I am eating diner
+
+LazyMan('Tony').eat('lunch').eat('dinner').sleepFirst(5).sleep(10).eat('junk food');
+// Hi I am Tony
+// 等待了5秒...
+// I am eating lunch
+// I am eating dinner
+// 等待了10秒...
+// I am eating junk food
+```
+
+```js
+class LazyMan {
+  constructor(name) {
+    if (!(this instanceof LazyMan)) {
+      console.log('call')
+      return new LazyMan(name)
+    }
+    this.name = name
+    this.queue = []
+    console.log(`Hi I am ${name}`)
+
+    setTimeout(async () => {
+      for (let fn of this.queue) {
+        await fn()
+      }
+    })
+  }
+
+  sleepFirst(time) {
+    this.queue.unshift(() => {
+      return new Promise(resolve => {
+        setTimeout(() => {
+          console.log(`等待了${time}秒...`)
+          resolve()
+        }, time)
+      })
+    })
+    return this
+  }
+
+  sleep(time) {
+    this.queue.push(() => {
+      return new Promise(resolve => {
+        setTimeout(() => {
+          console.log(`等待了${time}秒...`)
+          resolve()
+        }, time)
+      })
+    })
+    return this
+  }
+
+  eat(food) {
+    this.queue.push(() => {
+      console.log(`I am eating ${food}`)
+    })
+    return this
+  }
+}
+```
+
+# 44、分析比较 opacity: 0、visibility: hidden、display: none 优劣和适用场景。
+
+# 45、箭头函数与普通函数（function）的区别是什么？构造函数（function）可以使用 new 生成实例，那么箭头函数可以吗？为什么？
