--- a/docs/002-前端/006-框架/vue/源码/问题.md
+++ b/docs/002-前端/006-框架/vue/源码/问题.md
@@ -344,6 +344,16 @@ if (isTrue(Ctor.options.abstract)) {
 
 # 为什么每个组件实例的$createElement方法不一样？
 
+# activeInstance和currentRenderingInstance区别?
+- activeInstance 正在patch的实例
+- currentRenderingInstance 正在执行render的实例
+
+# $slots和$scopedSlots是什么时候获取的？
+1. 父组件render方法
+2. 子组件vnode.componentOptions.children
+3. options.__renderChildren = vnode.componentOptions.children
+3. $slots、$scopedSlots
+
 
 
 
