--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -51,3 +51,4 @@
 12. [试题](https://bitable.feishu.cn/app8Ok6k9qafpMkgyRbfgxeEnet?from=logout&table=tblEnSV2PNAajtWE&view=vewJHSwJVd)
 13. [2019试题](https://github.com/phshy0607/issue-blog-record/issues/11)
 13. [试题3](https://github.com/Amybiubiu/Blog/issues/19)
+13. [blog](https://github.com/yygmind/blog)
