--- a/docs/002-前端/002-javascript/000-记录.md
+++ b/docs/002-前端/002-javascript/000-记录.md
@@ -356,3 +356,11 @@ class LazyMan {
 # 44、分析比较 opacity: 0、visibility: hidden、display: none 优劣和适用场景。
 
 # 45、箭头函数与普通函数（function）的区别是什么？构造函数（function）可以使用 new 生成实例，那么箭头函数可以吗？为什么？
+
+# 46、已知如下代码，如何修改才能让图片宽度为 300px ？注意下面代码不可修改。
+```html
+<img src="1.jpg" style="width:480px!important;”>
+```
+
+# 47、 如何设计实现无缝轮播
+# 48\模拟实现一个 Promise.finally
