--- a/docs/002-前端/002-javascript/000-记录.md
+++ b/docs/002-前端/002-javascript/000-记录.md
@@ -376,3 +376,127 @@ function fn() {
     console.log(this) // undefined
 }
 ```
+
+# 55、数组里面有10万个数据，取第一个元素和第10万个元素的时间相差多少
+# 56、使用 JavaScript Proxy 实现简单的数据绑定
+```js
+function typeOf(obj) {
+  return Object.prototype.toString.call(obj).slice(8, -1)
+}
+
+function Observer(data) {
+  const DepMap = new Map()
+  return new Proxy(data, {
+    set(obj, prop, value) {
+      // console.log('set', obj, prop, value)
+      let oldValue = obj[prop]
+      let newValue = obj[prop] = typeOf(value) === 'Object' ? Observer(value) : value
+      if (oldValue !== newValue) {
+        let dep = DepMap.get(prop)
+        if (dep) {
+          dep.notify()
+        }
+      }
+    },
+    get(obj, prop) {
+      // console.log('get', obj, prop)
+      if (!DepMap.has(prop) && prop in obj) {
+        DepMap.set(prop, new Dep())
+      }
+      let dep = DepMap.get(prop)
+      let value = obj[prop]
+      if (typeOf(value) === 'Object') {
+        value = Observer(value)
+      }
+      if (Dep.target) {
+        dep.depend(Dep.target)
+      }
+      return value
+    },
+    deleteProperty(obj, prop) {
+      delete obj[prop]
+      let dep = DepMap.get(prop)
+      if (dep) {
+        dep.notify()
+        DepMap.delete(prop)
+      }
+      console.log('deleteProperty', obj, prop)
+    }
+  })
+}
+
+class Dep {
+  constructor() {
+    this.subscribe = []
+  }
+  depend(effect) {
+    this.subscribe.push(effect)
+    effect.depend(this)
+  }
+  cancel(effect) {
+    let index = this.subscribe.indexOf(effect)
+    if (index > -1) {
+      this.subscribe.splice(index, 1)
+    }
+  }
+  notify() {
+    let arr = this.subscribe.slice()
+    for (let effect of arr) {
+      try {
+        effect.exec()
+      } catch (e) {
+        console.error(e)
+      }
+    }
+  }
+}
+Dep.target = null
+
+function effect(callback) {
+  if (typeOf(callback) === 'Function' && !callback._effect) {
+    const effectObj = {
+      value: undefined,
+      deps: [],
+      depend(dep) {
+        this.deps.push(dep)
+      },
+      cancel() {
+        this.deps.forEach((dep) => {
+          dep.cancel(this)
+        })
+        this.deps = []
+      }
+    }
+    callback._effect = effectObj
+    effectObj.exec = callback
+    Dep.target = effectObj
+    callback()
+  }
+  return () => {
+    callback._effect.cancel()
+    callback._effect = undefined
+  }
+}
+
+let p = Observer([1, 2])
+let cancel = effect(() => {
+  console.log('effect ===> p[0]', p[0])
+})
+// // console.log('p.b.c', p.b.c)
+// // cancel()
+setTimeout(() => {
+  p[0] = 6
+}, 2000)
+
+```
+
+# 57、 给定一个数组，将数组中的元素向右移动 k 个位置，其中 k 是非负数。
+```js
+// 输入: [1, 2, 3, 4, 5, 6, 7] 和 k = 3
+// 输出: [5, 6, 7, 1, 2, 3, 4]
+
+arr.splice(-k).concat(arr)
+```
+
+# 58、Vue 的父组件和子组件生命周期钩子执行顺序是什么
+# 59、
