--- a/docs/002-前端/002-javascript/000-记录.md
+++ b/docs/002-前端/002-javascript/000-记录.md
@@ -499,4 +499,12 @@ arr.splice(-k).concat(arr)
 ```
 
 # 58、Vue 的父组件和子组件生命周期钩子执行顺序是什么
-# 59、
+# 59、请实现一个 add 函数，满足以下功能。
+```js
+add(1); 			// 1
+add(1)(2);  	// 3
+add(1)(2)(3)；// 6
+add(1)(2, 3); // 6
+add(1, 2)(3); // 6
+add(1, 2, 3); // 6
+```
