--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -12,7 +12,7 @@
 5. Phaser.js
 
 # 即时通讯
-1. ![环信](http://docs-im.easemob.com/im/quickstart/guide/introduction)
+1. [环信](http://docs-im.easemob.com/im/quickstart/guide/introduction)
 2. 小鹅通
 3. 声网
 
@@ -21,7 +21,7 @@
 
 
 # 日志与监控、埋点
-1. fundebuge
+1. fundebug
 2. talkingdata
 3. grwingio
 
@@ -31,9 +31,9 @@
 
 
 # 工具
-1. ![正则学习](https://jex.im/regulex)
+1. [正则学习](https://jex.im/regulex)
 2. Can I Use
-3. ![unicode字符查询](https://www.qqxiuzi.cn/zh/unicode-zifu.php?plane=1&ks=10000&js=10FFF)
+3. [unicode字符查询](https://www.qqxiuzi.cn/zh/unicode-zifu.php?plane=1&ks=10000&js=10FFF)
 
 # 前端学习
 
