--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -34,6 +34,7 @@
 1. [正则学习](https://jex.im/regulex)
 2. Can I Use
 3. [unicode字符查询](https://www.qqxiuzi.cn/zh/unicode-zifu.php?plane=1&ks=10000&js=10FFF)
+4. [bootcdn](https://www.bootcdn.cn/)
 
 # 前端学习
 
@@ -52,3 +53,5 @@
 13. [2019试题](https://github.com/phshy0607/issue-blog-record/issues/11)
 13. [试题3](https://github.com/Amybiubiu/Blog/issues/19)
 13. [blog](https://github.com/yygmind/blog)
+14. [](https://github.com/aermin/blog)
+15. [react生命周期](https://projects.wojtekmaj.pl/react-lifecycle-methods-diagram/)
