--- a/docs/002-前端/002-javascript/000-记录.md
+++ b/docs/002-前端/002-javascript/000-记录.md
@@ -508,3 +508,27 @@ add(1)(2, 3); // 6
 add(1, 2)(3); // 6
 add(1, 2, 3); // 6
 ```
+
+# 60、将index作为key的坑
+```js
+new Vue({
+    data() {
+        return {
+            list: [1, 2, 3]
+        }
+    },
+    methods: {
+        handleClick() {
+            this.list.push(Math.random())
+            // this.list.unshift(Math.random()) 
+        }
+    },
+    template:`
+        <div @click="handleClick">
+            <div v-for="(item, index) in list" :key="index>{{item}}</div>
+        </div>
+    `
+})
+```
+
+# 61、将index作为key的好处？
