--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -10,6 +10,7 @@
 3. cocos2d
 4. pixi
 5. Phaser.js
+6. flv.js
 
 # 即时通讯
 1. [环信](http://docs-im.easemob.com/im/quickstart/guide/introduction)
@@ -55,3 +56,8 @@
 13. [blog](https://github.com/yygmind/blog)
 14. [](https://github.com/aermin/blog)
 15. [react生命周期](https://projects.wojtekmaj.pl/react-lifecycle-methods-diagram/)
+16. [](https://github.com/f2e-awesome/knowledge)
+17. [前端知识](https://github.com/f2e-awesome/knowledge)
+18. [移动端](https://github.com/RubyLouvre/mobileHack)
+19. [移动端](https://www.cnblogs.com/PeunZhang/p/3407453.html#question_23)
+20. [移动端](https://blog.csdn.net/hardgirls/article/details/51722519)
