--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -36,6 +36,7 @@
 2. Can I Use
 3. [unicode字符查询](https://www.qqxiuzi.cn/zh/unicode-zifu.php?plane=1&ks=10000&js=10FFF)
 4. [bootcdn](https://www.bootcdn.cn/)
+5. [astexplorer](https://astexplorer.net/)
 
 # 前端学习
 
