--- a/docs/002-前端/006-框架/vue/源码/问题.md
+++ b/docs/002-前端/006-框架/vue/源码/问题.md
@@ -354,6 +354,8 @@ if (isTrue(Ctor.options.abstract)) {
 3. options.__renderChildren = vnode.componentOptions.children
 3. $slots、$scopedSlots
 
+# extendOptions、options、sealedOptions、superOptions
+
 
 
 
