--- a/docs/002-前端/017-面试/3.md
+++ b/docs/002-前端/017-面试/3.md
@@ -153,3 +153,28 @@
 
 # 小程序
 ### 组件库
+1. 基础组件
+    - View容器
+    - 轮播图Swiper
+    - 轮播子项
+    - 文本
+    - 图文导航(点击图片跳转)
+2. 营销组件(业务组件)
+
+
+### 思考: 组件库是要小程序和编辑器都写一套吗？
+1. 写一套即可，使用uniapp做组件库的同构
+2. 在小程序端使用uniapp
+
+
+### 小程序内部是怎样通过json配置来渲染页面的？
+
+
+
+
+
+
+
+
+
+
