--- a/docs/002-前端/017-面试/3.md
+++ b/docs/002-前端/017-面试/3.md
@@ -136,20 +136,15 @@
 - 组件属性设置区域
 - json查看区域
 
-### 微页面列表
+### 模块列表
 - 创建分类
-- 分类下创建页面
+- 分类下创建模块
 - 操作
-    - 编辑页面内容
+    - 编辑模块内容
     - 复制
     - 删除
     - 修改模块名称、分类
     - 定时发布
-    - 设置为
-        - 主页
-        - 商城主页
-        - ....
-
 
 # 小程序
 ### 组件库
@@ -165,6 +160,8 @@
 ### 思考: 组件库是要小程序和编辑器都写一套吗？
 1. 写一套即可，使用uniapp做组件库的同构
 2. 在小程序端使用uniapp
+
+### 微页面预览怎么实现？
 
 
 ### 小程序内部是怎样通过json配置来渲染页面的？
