--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -55,7 +55,7 @@
 13. [2019试题](https://github.com/phshy0607/issue-blog-record/issues/11)
 13. [试题3](https://github.com/Amybiubiu/Blog/issues/19)
 13. [blog](https://github.com/yygmind/blog)
-14. [](https://github.com/aermin/blog)
+14. [blog](https://github.com/aermin/blog)
 15. [react生命周期](https://projects.wojtekmaj.pl/react-lifecycle-methods-diagram/)
 16. [](https://github.com/f2e-awesome/knowledge)
 17. [前端知识](https://github.com/f2e-awesome/knowledge)
