--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -57,8 +57,9 @@
 13. [blog](https://github.com/yygmind/blog)
 14. [blog](https://github.com/aermin/blog)
 15. [react生命周期](https://projects.wojtekmaj.pl/react-lifecycle-methods-diagram/)
-16. [](https://github.com/f2e-awesome/knowledge)
+16. [f2e-awesome](https://github.com/f2e-awesome/knowledge)
 17. [前端知识](https://github.com/f2e-awesome/knowledge)
 18. [移动端](https://github.com/RubyLouvre/mobileHack)
 19. [移动端](https://www.cnblogs.com/PeunZhang/p/3407453.html#question_23)
 20. [移动端](https://blog.csdn.net/hardgirls/article/details/51722519)
+21. [node](https://github.com/chyingp/nodejs-learning-guide/blob/master/README.md)
