--- a/docs/006-网络协议/000-记录.md
+++ b/docs/006-网络协议/000-记录.md
@@ -87,7 +87,7 @@ https://zhuanlan.zhihu.com/p/102561034
 5. 提高安全性
 6. 二进制分帧
 ### 多路复用 — 解决队头阻塞
-允许在一个连接上无限制并发流。多路复用允许同时通过单一的 HTTP/2 连接发起多重的请求-响应消息。多路复用允许同时通过单一的 HTTP/2 连接发起多重的请求-响应消息。
+允许在一个连接上无限制并发流。多路复用允许同时通过单一的 HTTP/2 连接发起多重的请求-响应消息。在 HTTP/1.1 协议中 「浏览器客户端在同一时间，针对同一域名下的请求有一定数量限制。超过限制数目的请求会被阻塞」。
 ### 头部压缩 — 解决巨大的 HTTP 头部
 使用专门的 HPACK 算法，每次请求和响应只发送差异头部，一般可以达到 50%~90% 的高压缩率。
 ### 请求优先级 — 先获取重要数据
