--- a/docs/002-前端/006-框架/vue/源码/问题.md
+++ b/docs/002-前端/006-框架/vue/源码/问题.md
@@ -330,6 +330,10 @@ if (isTrue(Ctor.options.abstract)) {
 
 
 # transition
+1. 在insert hook中添加类fade-enter和fade-enter-active
+2. 同时在下一轮nextFrame(下一帧)移除fade-enter, 添加fade-enter-to
+3. 动画执行结束后，移除fade-enter-to和fade-enter-active
+4. transition在隐藏时会渲染成一个空的文本节点
 
 # keep-alive
 
@@ -355,7 +359,28 @@ if (isTrue(Ctor.options.abstract)) {
 3. $slots、$scopedSlots
 
 # extendOptions、options、sealedOptions、superOptions
+1. 三者的区别？
 
+
+# vnode hook?
+1. 组件：
+    1. init
+    2. insert
+    3. prepatch
+    4. destroy
+
+2. dom
+    1. create：创建dom元素后， 执行create更新属性、事件...
+    2. update: patchVnode时， 执行update更新属性、事件...
+    3. remove
+    4. destroy
+    5. active
+
+3. 其他
+    1. postpatch： 自己和children都patch完成后执行
+
+# 组件的根节点不一致时组件实例不能复用？
+1. 待验证
 
 
 
