--- a/docs/002-前端/006-框架/vue/源码/问题.md
+++ b/docs/002-前端/006-框架/vue/源码/问题.md
@@ -373,7 +373,7 @@ if (isTrue(Ctor.options.abstract)) {
     1. create：创建dom元素后， 执行create更新属性、事件...
     2. update: patchVnode时， 执行update更新属性、事件...
     3. remove
-    4. destroy
+    4. destroy：移除ref, 更新指令
     5. active
 
 3. 其他
