--- a/docs/002-前端/012-常用库/000-常用npm包.md
+++ b/docs/002-前端/012-常用库/000-常用npm包.md
@@ -1,28 +1,17 @@
 ### fs-extra
-
 文件操作相关工具库
 是系统fs模块的扩展，提供了更多便利的 API，并继承了fs模块的 API
 
-
-
 ### semver
-
 minimist: 获取命令行参数
 
-
-
 ### nodemon
-
 开发服务自动重启。
 
-
-
-Snipaste
-bilibili flv.js
-phaser
-
-
-
-- vm-browserify
-- heapdump
-- Lottie
+### Snipaste
+### bilibili flv.js
+### phaser
+### vm-browserify
+### heapdump
+### Lottie
+### http-proxy-mideware
