--- a/docs/002-前端/002-javascript/022-数据类型.md
+++ b/docs/002-前端/002-javascript/022-数据类型.md
@@ -100,10 +100,11 @@ a + b // "420" 这个地方，注意一下
 c + d // 42
 a + d // "420"
 [] + {} // [object object]
-+[] // 0 这里的{}会被当作是一个代码块，所以本质上是+[]
+{} + [] // 0 这里的{}会被当作是一个代码块，所以本质上是+[]
 console.log({} + []) // [object object]
 +[] // 0
 -[] // -0
+[] == ![] // true
 ```
 
 > 隐式强制类型转换为布尔值
