--- a/docs/005-数据结构与算法/003-排序算法.md
+++ b/docs/005-数据结构与算法/003-排序算法.md
@@ -12,6 +12,10 @@
 ##### 交换排序
 
 - 冒泡排序
+- 思路
+
+  1. 每遍历1次外层循环一轮冒泡完成。
+  2. 内层循环从0位置开始两辆比较，如果arr[j]大于arr[j+1]，则这两个位置的数字交换。
 
 ```js
 function bubbleSort(arr) {
@@ -32,7 +36,12 @@ function bubbleSort(arr) {
 ```
 
 - 快速排序
-
+- 思路
+  1. 以数组的第一位作为基准数，遍历整个数组将所有比arr[0]数字从第二位开始排列。同时记录最后一个比arr[0]小的位置index，此时[1, index]区间的数都是比arr[0]小， [index+1, arr.length-1]都是比arr[0]大。
+  2. 将arr[0]和arr[index]调换，此时index位置的数字就已经排序好了。
+  3. 接下来我们就要对左边的数组[0, index -1]和右边的数组[index+1, arr.length-1]进行排序。
+  4. 直到每次排序后切割的两个数组的长度为1为止。
+- 本质上就是找到一个数组arr[0]位置的正确位置j，然后递归找到左边数组[0, j-1]的arr[0]位置，找到右边数组[j+1, arr.length]的arr[j+1]的位置。
 ```js
 function quickSort(arr, left, right) {
   var len = arr.length;
@@ -70,9 +79,51 @@ function swap(arr, i, j) {
 }
 ```
 
+手写
+```js
+function qickSort(arr, start, end) {
+  var len = arr.length
+  start = start === undefined? 0: start
+  end = end === undefined? len - 1: end
+
+  if (start >= end) return
+
+  var base = start
+  var index = base + 1
+  for (var i = base + 1; i<=end; i++) {
+    if (arr[i] < arr[base]) {
+      swip(index, i)
+      index++
+    }
+  }
+  swip(base, index - 1)
+
+  if (index - 2 > 0) {
+    qickSort(arr, start, index - 2)
+  }
+
+  if (index < arr.length-1) {
+    qickSort(arr, index, end)
+  }
+
+  console.log(arr)
+  function swip(i, j) {
+    var temp
+    temp = arr[i]
+    arr[i] = arr[j]
+    arr[j] = temp
+  }
+}
+```
+
 ##### 插入排序
 
 - 简单插入排序
+- 思路
+
+  1. 最外层循环每遍历时，每遍历1次，前面i个数字都是已经排好序的，这是前提。
+  2. 在上1次排序后，因为前i都是顺序排列的，所以将i+1位置的数据取出来保存在temp上。
+  3. 在内层循环从i开始递减的顺序循环与temp比较大小，当比temp大是就往后移动一位，直到某一位置的数字比temp小，那么后面的位置就是temp排序后的位置。
 
 ```js
 function insertionSort(arr) {
