--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -64,3 +64,4 @@
 20. [移动端](https://blog.csdn.net/hardgirls/article/details/51722519)
 21. [nodejs](https://github.com/chyingp/nodejs-learning-guide/blob/master/README.md)
 22. [PWA书籍](https://juejin.cn/post/6844903517103063053)
+23. [面试试题](https://github.com/Advanced-Frontend/Daily-Interview-Question)
