--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -65,3 +65,4 @@
 21. [nodejs](https://github.com/chyingp/nodejs-learning-guide/blob/master/README.md)
 22. [PWA书籍](https://juejin.cn/post/6844903517103063053)
 23. [面试试题](https://github.com/Advanced-Frontend/Daily-Interview-Question)
+24. [赛码网练习题](https://exercise.acmcoder.com/comp_ques?type=0)
