--- a/docs/002-前端/002-javascript/002-DOM.md
+++ b/docs/002-前端/002-javascript/002-DOM.md
@@ -2,6 +2,7 @@
 - 两者不会相互冲突，按注册事件的先后顺序执行
 - document.onclick只能添加一个事件处理函数，重复添加会覆盖
 - document.addEventLinstener('click')可添加多个， 不会被覆盖
+- ie8不支持`addEventLinstener`
 
 # 事件冒泡与事件捕获
 - 事件处理的三个阶段？
