--- a/docs/002-前端/002-javascript/001-单点登录.md
+++ b/docs/002-前端/002-javascript/001-单点登录.md
@@ -81,3 +81,13 @@
 #
 
 -   http://10.1.1.248:9601
+
+# cas登陆流程图
+- 参考文档：
+https://blog.csdn.net/qq_33200676/article/details/82981742
+![](./image/210411-1443.png)
+
+# cas退出流程
+1. 任意系统登出，都会跳转到sso认证中心进行统一登出，通过sessionId找到相应的token，再找到对应需要注销的子系统机器sessionId，跳转到子系统，销毁局部session。
+
+2. 销毁全局session（sso认证中心的session），删除token信息和数据库中的子系统信息，跳转到登录页面 
