--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -13,15 +13,17 @@
 6. flv.js
 
 # 即时通讯
+
 1. [环信](http://docs-im.easemob.com/im/quickstart/guide/introduction)
 2. 小鹅通
 3. 声网
 
 # excel
+
 1. xlsx.js
 
-
 # 日志与监控、埋点
+
 1. fundebug
 2. talkingdata
 3. grwingio
@@ -30,11 +32,11 @@
 
 1. TweenMax
 
-
 # 工具
+
 1. [正则学习](https://jex.im/regulex)
 2. Can I Use
-3. [unicode字符查询](https://www.qqxiuzi.cn/zh/unicode-zifu.php?plane=1&ks=10000&js=10FFF)
+3. [unicode 字符查询](https://www.qqxiuzi.cn/zh/unicode-zifu.php?plane=1&ks=10000&js=10FFF)
 4. [bootcdn](https://www.bootcdn.cn/)
 5. [astexplorer](https://astexplorer.net/)
 
@@ -50,19 +52,20 @@
 8. [尤雨溪 github](https://github.com/yyx990803/tucao/issues/1)
 9. [美团](https://tech.meituan.com/2018/10/11/fe-security-csrf.html)
 10. [政采云前端团队](https://www.zoo.team/article/jsbridge)
-11. [json校验](https://ajv.js.org/guide/formats.html#string-formats)
+11. [json 校验](https://ajv.js.org/guide/formats.html#string-formats)
 12. [试题](https://bitable.feishu.cn/app8Ok6k9qafpMkgyRbfgxeEnet?from=logout&table=tblEnSV2PNAajtWE&view=vewJHSwJVd)
-13. [2019试题](https://github.com/phshy0607/issue-blog-record/issues/11)
-13. [试题3](https://github.com/Amybiubiu/Blog/issues/19)
-13. [blog](https://github.com/yygmind/blog)
-14. [blog](https://github.com/aermin/blog)
-15. [react生命周期](https://projects.wojtekmaj.pl/react-lifecycle-methods-diagram/)
-16. [学习路线](https://github.com/f2e-awesome/knowledge)
-17. [前端知识](https://github.com/f2e-awesome/knowledge)
-18. [移动端](https://github.com/RubyLouvre/mobileHack)
-19. [移动端](https://www.cnblogs.com/PeunZhang/p/3407453.html#question_23)
-20. [移动端](https://blog.csdn.net/hardgirls/article/details/51722519)
-21. [nodejs](https://github.com/chyingp/nodejs-learning-guide/blob/master/README.md)
-22. [PWA书籍](https://juejin.cn/post/6844903517103063053)
-23. [面试试题](https://github.com/Advanced-Frontend/Daily-Interview-Question)
-24. [赛码网练习题](https://exercise.acmcoder.com/comp_ques?type=0)
+13. [2019 试题](https://github.com/phshy0607/issue-blog-record/issues/11)
+14. [试题 3](https://github.com/Amybiubiu/Blog/issues/19)
+15. [blog](https://github.com/yygmind/blog)
+16. [blog](https://github.com/aermin/blog)
+17. [react 生命周期](https://projects.wojtekmaj.pl/react-lifecycle-methods-diagram/)
+18. [学习路线](https://github.com/f2e-awesome/knowledge)
+19. [前端知识](https://github.com/f2e-awesome/knowledge)
+20. [移动端](https://github.com/RubyLouvre/mobileHack)
+21. [移动端](https://www.cnblogs.com/PeunZhang/p/3407453.html#question_23)
+22. [移动端](https://blog.csdn.net/hardgirls/article/details/51722519)
+23. [nodejs](https://github.com/chyingp/nodejs-learning-guide/blob/master/README.md)
+24. [PWA 书籍](https://juejin.cn/post/6844903517103063053)
+25. [面试试题](https://github.com/Advanced-Frontend/Daily-Interview-Question)
+26. [赛码网练习题](https://exercise.acmcoder.com/comp_ques?type=0)
+27. [csstriggers](https://csstriggers.com/)
