--- a/docs/006-网络协议/000-记录.md
+++ b/docs/006-网络协议/000-记录.md
@@ -40,15 +40,27 @@ HTTP报文是HTTP协议在客户端和服务端之间传送的数据块。
 # 8、HTTP的状态码分为哪几类？
 ### 100~199
 信息提示
+1. 101：协议转换，比如说web socket
 ### 200~299
 请求成功
+1. 200： OK
+2. 204: 服务端响应，但是没有内容返回。使用场景： 只客户端需要给服务端发送信息，而服务端不需要给客户端发送信息。
+3. 206：客户端进行了范围请求。
 ### 300~399
 重定向
+1. 301：永久重定向
+2. 302：临时重定向
+3. 304：缓存命中
 ### 400~499
 客户端错误
+1. 400：坏的请求，请求报文中存在错误。
+2. 401：未认证
+3. 403：未授权
+4. 404: 未找到对应的资源
 ### 500~599
 服务器错误
-
+1. 500：服务端在执行请求的过程中发生了错误
+2. 504：请求超时
 
 # 9、常见的状态码
 ![](./image/210328-2203.jpg)
