--- a/docs/002-前端/006-框架/react/000-记录.md
+++ b/docs/002-前端/006-框架/react/000-记录.md
@@ -40,3 +40,11 @@ class ScrollingList extends React.Component {
   }
 }
 ```
+
+### 一定要使用react.forwardRef()吗？
+### keepalive怎么实现
+### useState的参数？
+### 使用useState后state没有立即改变？
+### 函数式组件使用ref
+### createPortal
+### useEffect和useLayoutEffect的区别？
