--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -69,3 +69,14 @@
 25. [面试试题](https://github.com/Advanced-Frontend/Daily-Interview-Question)
 26. [赛码网练习题](https://exercise.acmcoder.com/comp_ques?type=0)
 27. [csstriggers](https://csstriggers.com/)
+
+
+- SwitchHosts
+- Snipaste.exe
+- Colors.exe
+- C-Lodop (Print)
+- Typora
+- FSCapturePortable.exe
+- yEd Graph Editor
+- Beyond Compare 4
+- Fiddler.exe
