--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -39,6 +39,7 @@
 3. [unicode 字符查询](https://www.qqxiuzi.cn/zh/unicode-zifu.php?plane=1&ks=10000&js=10FFF)
 4. [bootcdn](https://www.bootcdn.cn/)
 5. [astexplorer](https://astexplorer.net/)
+6. [chrome插件下载地址](https://www.crx4chrome.com/crx/3068/)
 
 # 前端学习
 
