--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -40,6 +40,7 @@
 4. [bootcdn](https://www.bootcdn.cn/)
 5. [astexplorer](https://astexplorer.net/)
 6. [chrome插件下载地址](https://www.crx4chrome.com/crx/3068/)
+7. [流程图工具](https://app.diagrams.net/?src=about)
 
 # 前端学习
 
@@ -70,6 +71,7 @@
 25. [面试试题](https://github.com/Advanced-Frontend/Daily-Interview-Question)
 26. [赛码网练习题](https://exercise.acmcoder.com/comp_ques?type=0)
 27. [csstriggers](https://csstriggers.com/)
+28. [制作简历](https://www.wondercv.com/jobs/graduation?identify=already_work)
 
 
 - SwitchHosts
@@ -81,3 +83,4 @@
 - yEd Graph Editor
 - Beyond Compare 4
 - Fiddler.exe
+
