--- a/docs/002-前端/002-javascript/011-防抖和节流.md
+++ b/docs/002-前端/002-javascript/011-防抖和节流.md
@@ -12,6 +12,9 @@ function debounce(callback, time, context) {
   }
 }
 ```
+如果将`setTimeout`改成`Promise.resolve()`适合什么情况。
+
+
 # 节流
 ```js
 function throttle(callback, time, context) {
