--- a/docs/002-前端/022-调试技巧/001-移动端和pc端调试技巧.md
+++ b/docs/002-前端/022-调试技巧/001-移动端和pc端调试技巧.md
@@ -9,13 +9,22 @@
 > 附：Chrome 官方指导文档 https://developers.google.com/web/tools/chrome-devtools/remote-debugging?utm_campaign=2016q3&utm_medium=redirect&utm_source=dcc 
 
 ### 2. 抓包
-
+- [Whistle](https://zhuanlan.zhihu.com/p/79037633)
+- Wireshark - 网络数据包分析软件，网络协议栈的各个层的数据都可以很方便地查看。
+- Termshark - 「终端版」的 Wireshark
+- Charles - 一款老牌 HTTP/HTTPS 抓包调试工具
+- Fiddler - 又一款免费的 Web 调试工具
+- mitmproxy - 一款开源免费的交互式的 HTTPS 代理
 ### 3. 模拟器
 
-### 4.vconsole
+### 4.vconsole/eruda
 
 ### 5.微信打开X5调试
 
 ### 6.weinre
 
 ### 7.UC 浏览器开发者版本
+
+### 8.内网穿透
+- frp
+- ngrok
