--- a/docs/002-前端/002-javascript/基础/定时器.md
+++ b/docs/002-前端/002-javascript/基础/定时器.md
@@ -4,7 +4,7 @@ setTimeout和setInterval的对比。
 
 ##### 相同点
 
-1. 第一个参数是cb代表的是回调函数callback，第二个代表的是时间，以ms计算，第三个参数以后是cb的参数
+1. 第一个参数是cb代表的是回调函数callback，第二个代表的是时间，以ms计算，**第三个参数以后是cb的参数**
 2. 返回值都是一个整数用于取消定时器任务的执行。
 3. 实际的执行时间可能不会按照预期的时间执行。
 4. 回调函数this指向的是全局对象，除非bind了this。
