--- a/docs/002-前端/002-javascript/002-DOM事件模型.md
+++ b/docs/002-前端/002-javascript/002-DOM事件模型.md
@@ -5,7 +5,7 @@
 - ie8不支持`addEventLinstener`
 
 # 事件冒泡与事件捕获
-- 事件处理的三个阶段？
+- 事件处理的三个阶段？（捕获阶段、目标阶段、冒泡阶段）
 - 事件冒泡和事件捕获是为了解决什么问题？执行顺序。
 - 事件冒泡的使用场景？ 
   - dom事件委托（代理）
@@ -15,20 +15,24 @@
 
 ### `ev.stopPropagation()`和`ev.stopImmediatePropagation`
 - 相同： 他们的作用都是阻止捕获和冒泡阶段中当前事件的进一步传播。
-- 不相同： `ev.stopPropagation()`不能阻止当前事件的其他处理函数的执行，`ev.stopImmediatePropagation()`能阻止当前事件的其他处理函数的执行。
+- 不相同： **`ev.stopPropagation()`不能阻止当前事件的其他处理函数的执行，`ev.stopImmediatePropagation()`能阻止当前事件的其他处理函数的执行**。
 
 ### `ev.preventDefault()`
 
+阻止默认事件。
+
 
 ### `ev.composedPath()`
-调用该侦听器时返回事件路径。 如果影子根节点被创建并且ShadowRoot.mode是关闭的，那么该路径不包括影子树中的节点。
+**调用该侦听器时返回事件路径**。 如果影子根节点被创建并且ShadowRoot.mode是关闭的，那么该路径不包括影子树中的节点。
 
 ### 事件委托
 - 什么是事件委托？
+
 - 优点
+
 - 缺点
 
-# shadow dom
+  
 
 # 创建自定义事件
 下面的例子定义了一个自定义事件`eventName`, 由于设置了`bubbles: true`所以当`body`触发事件后`doucment`也会接收到事件。
@@ -54,6 +58,10 @@ document.body.dispatchEvent(event)
 
 - `body`和`document`接收的事件对象是同一个对象
 - 通过`dispatchEvent`触发内置事件？
+
+
+
+
 
 # dom操作api
 ### 创建节点
@@ -108,6 +116,8 @@ document.body.dispatchEvent(event)
 
 DOM 解析完成后触发，不需要等待图片等其他资源加载完成。
 > load的执行时机
+
 页面上所有的 DOM, 样式表, 脚本, 图片等资源已经加载完毕才会触发。
 
-> DOMContentLoaded比load先执行。
+**DOMContentLoaded比load先执行。**
+
