--- a/docs/002-前端/002-javascript/基础/对象.md
+++ b/docs/002-前端/002-javascript/基础/对象.md
@@ -1,19 +1,19 @@
 # 1、对象属性类型
 ## 1、数据属性特性
-[[configurable]]: 可重新配置的。**设置为false后不可逆转**，不能再设置属性的特性。
-[[enumerable]]：可遍历的。
-[[writeable]]：可修改的。
-[[value]]：属性的值，读写操作。
+**[[configurable]]**: 可重新配置的。**设置为false后不可逆转**，不能再设置属性的特性。
+**[[enumerable]]**：可遍历的。
+**[[writeable]]**：可修改的。
+**[[value]]**：属性的值，读写操作。
 
 > 注意：
 > 1. 在对象上直接定义的属性，所有特性的值均为true。
 > 2. 采用Object.defineProperty()定义的，如不指定均为false。
 
 ## 2、访问器属性特性
-[[configurable]]: 可重新配置的。用法与上面一样。
-[[enumerable]]：可遍历的。默认true
-[[set]]：写 默认undefined
-[[get]]：读 默认undefined
+**[[configurable]]**: 可重新配置的。用法与上面一样。
+**[[enumerable]]**：可遍历的。默认true
+**[[set]]**：写 默认undefined
+**[[get]]**：读 默认undefined
 
 注意：
 访问器属性只能通过Object.defineProperty()定义。
@@ -414,5 +414,4 @@ Object.getOwnPropertyNames(Person.prototype)
 ```
 
 > instanceof的原理是什么？
-
 
