--- a/docs/002-前端/002-javascript/019-尾调优化.md
+++ b/docs/002-前端/002-javascript/019-尾调优化.md
@@ -1,5 +1,5 @@
 ### 什么是尾调？
-> 尾调用的概念非常简单，一句话就能说清楚，就是指某个函数的最后一步是调用另一个函数。
+> 尾调用的概念非常简单，一句话就能说清楚，就是指**某个函数的最后一步是调用另一个函数**。
 
 ```js
 function f(x){
@@ -40,7 +40,7 @@ function f(x){
 
 函数调用会在内存形成一个"调用记录"，又称"调用帧"（call frame），保存调用位置和内部变量等信息。如果在函数A的内部调用函数B，那么在A的调用记录上方，还会形成一个B的调用记录。等到B运行结束，将结果返回到A，B的调用记录才会消失。如果函数B内部还调用函数C，那就还有一个C的调用记录栈，以此类推。所有的调用记录，就形成一个"调用栈"（call stack）。
 
-尾调用由于是函数的最后一步操作，所以不需要保留外层函数的调用记录，因为调用位置、内部变量等信息都不会再用到了，只要直接用内层函数的调用记录，取代外层函数的调用记录就可以了。如果所有函数都是尾调用，那么完全可以做到每次执行时，调用记录只有一项，这将大大节省内存。这就是"尾调用优化"的意义。
+**尾调用由于是函数的最后一步操作，所以不需要保留外层函数的调用记录，因为调用位置、内部变量等信息都不会再用到了，只要直接用内层函数的调用记录，取代外层函数的调用记录就可以了。**如果所有函数都是尾调用，那么完全可以做到每次执行时，调用记录只有一项，这将大大节省内存。这就是"尾调用优化"的意义。
 
 
 
@@ -48,6 +48,8 @@ function f(x){
 > 函数调用自身，称为递归。如果尾调用自身，就称为尾递归。
 递归非常耗费内存，因为需要同时保存成千上百个调用记录，很容易发生"栈溢出"错误（stack overflow）。
 但对于尾递归来说，由于只存在一个调用记录，所以永远不会发生"栈溢出"错误。
+
+
 
 
 ### ES6的尾调用优化只在严格模式下开启，正常模式是无效的。
