--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -27,6 +27,7 @@
 1. fundebug
 2. talkingdata
 3. grwingio
+4. Sentry
 
 # 动画
 
@@ -99,3 +100,5 @@
 - Beyond Compare 4
 - Fiddler.exe
 
+# canvas
+- fabricjs
