--- a/docs/002-前端/008-项目工程化/001-webpack/000-记录.md
+++ b/docs/002-前端/008-项目工程化/001-webpack/000-记录.md
@@ -1,5 +1,6 @@
 # 文档
 1. [webpack优化](https://blog.csdn.net/u011413061/article/details/51872412?from=timeline&isappinstalled=0)
+2. [生成config](https://createapp.dev/webpack)
 
 # 优化
 1. resolve：减小 Webpack 覆盖的范围
@@ -23,6 +24,7 @@
 4. OccurrenceOrderPlugin
 5. DedupePlugin
 6. HappyPack
+7. HardSource
 # loader
 
 # webpackDevMiddleware
