--- a/docs/002-前端/004-css/009-BFC.md
+++ b/docs/002-前端/004-css/009-BFC.md
@@ -1,6 +1,19 @@
+
+
+- https://segmentfault.com/a/1190000014886753
+
+
+
 # BFC
+
+https://developer.mozilla.org/zh-CN/docs/Web/Guide/CSS/Block_formatting_context
+
 ### 什么是BFC?
-- 块级格式化上下文。(block format context)
+**块格式化上下文（Block Formatting Context，BFC）** 是Web页面的可视CSS渲染的一部分，是块盒子的布局过程发生的区域，也是浮动元素与其他元素交互的区域。
+
+> 记忆： 布局过程发生的区域
+
+
 
 ### 特点
 - 一个独立的布局容器，在布局上不会影响外面的元素，也不会影响外面的元素。
@@ -8,23 +21,42 @@
 - 形成了BFC的元素不会与其他浮动元素重叠。
 - 在BFC元素内部的浮动元素是会被计算在内的。
 
+
+
 ### 形成BFC的场景？
-- 1. 根元素或包含根元素的元素，比如html元素
-- 2. 浮动元素（元素的 float 不是 none）
-- 3. 绝对定位元素（元素的 position 为 absolute 或 fixed）
-- 4. 行内块元素（元素的 display 为 inline-block）
-- 5. 表格单元格（元素的 display为 table-cell，HTML表格单元格默认为该值）
-- 6. 表格标题（元素的 display 为 table-caption，HTML表格标题默认为该值）
-- 7. 匿名表格单元格元素（元素的 display为 table、table-row、 table-row-group、table-header-group、table-footer-group（分别是HTML table、row、tbody、thead、tfoot的默认属性）或 inline-table）
-- 8. overflow 值不为 visible 的块元素
-- 9. display 值为 flow-root 的元素
-- 10. contain 值为 layout、content或 strict 的元素
-- 11. 弹性元素（display为 flex 或 inline-flex元素的直接子元素）
-- 12. 网格元素（display为 grid 或 inline-grid 元素的直接子元素）
-- 13. 多列容器（元素的 column-count 或 column-width 不为 auto，包括 column-count 为 1）
-- 14. column-span 为 all 的元素始终会创建一个新的BFC，即使该元素没有包裹在一个多列容器中（标准变更，Chrome bug）。
+- 根元素（`<html>）`
+- 浮动元素（元素的 [`float`](https://developer.mozilla.org/zh-CN/docs/Web/CSS/float) 不是 `none`）
+- 绝对定位元素（元素的 [`position`](https://developer.mozilla.org/zh-CN/docs/Web/CSS/position) 为 `absolute` 或 `fixed`）
+- 行内块元素（元素的 [`display`](https://developer.mozilla.org/zh-CN/docs/Web/CSS/display) 为 `inline-block`）
+- 表格单元格（元素的 [`display`](https://developer.mozilla.org/zh-CN/docs/Web/CSS/display) 为 `table-cell`，HTML表格单元格默认为该值）
+- 表格标题（元素的 [`display`](https://developer.mozilla.org/zh-CN/docs/Web/CSS/display) 为 `table-caption`，HTML表格标题默认为该值）
+- 匿名表格单元格元素（元素的 [`display`](https://developer.mozilla.org/zh-CN/docs/Web/CSS/display) 为 `table、``table-row`、 `table-row-group、``table-header-group、``table-footer-group`（分别是HTML table、row、tbody、thead、tfoot 的默认属性）或 `inline-table`）
+- [`overflow`](https://developer.mozilla.org/zh-CN/docs/Web/CSS/overflow) 计算值(Computed)不为 `visible` 的块元素
+- [`display`](https://developer.mozilla.org/zh-CN/docs/Web/CSS/display) 值为 `flow-root` 的元素
+- [`contain`](https://developer.mozilla.org/zh-CN/docs/Web/CSS/contain) 值为 `layout`、`content `或 paint 的元素
+- 弹性元素（[`display`](https://developer.mozilla.org/zh-CN/docs/Web/CSS/display) 为 `flex` 或 `inline-flex `元素的直接子元素）
+- 网格元素（[`display`](https://developer.mozilla.org/zh-CN/docs/Web/CSS/display) 为 `grid` 或 `inline-grid` 元素的直接子元素）
+- 多列容器（元素的 [`column-count`](https://developer.mozilla.org/zh-CN/docs/Web/CSS/column-count) 或 [`column-width` (en-US)](https://developer.mozilla.org/en-US/docs/Web/CSS/column-width) 不为 `auto，包括 ``column-count` 为 `1`）
+- `column-span` 为 `all` 的元素始终会创建一个新的BFC，即使该元素没有包裹在一个多列容器中（[标准变更](https://github.com/w3c/csswg-drafts/commit/a8634b96900279916bd6c505fda88dda71d8ec51)，[Chrome bug](https://bugs.chromium.org/p/chromium/issues/detail?id=709362)）。
+
+
+
+块格式化上下文对浮动定位（参见 [`float`](https://developer.mozilla.org/zh-CN/docs/Web/CSS/float)）与清除浮动（参见 [`clear`](https://developer.mozilla.org/zh-CN/docs/Web/CSS/clear)）都很重要。浮动定位和清除浮动时只会应用于同一个BFC内的元素。浮动不会影响其它BFC中元素的布局，而清除浮动只能清除同一BFC中在它前面的元素的浮动。外边距折叠（[Margin collapsing](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Box_Model/Mastering_margin_collapsing)）也只会发生在属于同一BFC的块级元素之间。
+
+
+
+
 
 # IFC
+
+https://developer.mozilla.org/zh-CN/docs/Web/CSS/Inline_formatting_context
+
+行内格式化上下文是一个网页的渲染结果的一部分。其中，各行内框（inline boxes）一个接一个地排列，其排列顺序根据书写模式（writing-mode）的设置来决定：
+
+- 对于水平书写模式，各个框从左边开始水平地排列
+- 对于垂直书写模式，各个框从顶部开始水平地排列
+
+
 
 # GFC
 
