--- a/docs/002-前端/002-javascript/017-正则.md
+++ b/docs/002-前端/002-javascript/017-正则.md
@@ -117,8 +117,9 @@ console.log(string.match(regex)); // => ["goodbye"]
 ##### 2、如何匹配位置？
 *在 ES5 中，共有 6 个锚： ^、$、\b、\B、(?=p)、(?!p)*
 
-+ ^和$
-^（脱字符）匹配开头，在多行匹配中匹配行开头。$（美元符号）匹配结尾，在多行匹配中匹配行结尾。
++ `^和$`。
+
+  `^`（脱字符）匹配开头，在多行匹配中匹配行开头。`$（美元符号）`匹配结尾，在多行匹配中匹配行结尾。
 ```js
 var result="hello".replace(/^|$/g,'#');
 console.log(result);// => "#hello#"
