--- a/docs/002-前端/022-调试技巧/001-移动端和pc端调试技巧.md
+++ b/docs/002-前端/022-调试技巧/001-移动端和pc端调试技巧.md
@@ -28,3 +28,8 @@
 ### 8.内网穿透
 - frp
 - ngrok
+
+
+### 9. etc + 代理
+- 使用代理，将网络代理到本机
+- 本机通过配置etc将域名指向本地服务，如果是https的话需要webpack开启https，端口设置为443，http为80。
