--- a/docs/002-前端/002-javascript/039-模块化.md
+++ b/docs/002-前端/002-javascript/039-模块化.md
@@ -229,3 +229,14 @@ define(function (require) {
 2. AMD规范在浏览器环境中异步加载模块，而且可以并行加载多个模块。不过，AMD规范开发成本高，代码的阅读和书写比较困难，模块定义方式的语义不顺畅。
 3. CMD规范与AMD规范很相似，都用于浏览器编程，依赖就近，延迟执行，可以很容易在Node.js中运行。不过，依赖SPM 打包，模块的加载逻辑偏重
 4. ES6 在语言标准的层面上，实现了模块功能，而且实现得相当简单，完全可以取代 CommonJS 和 AMD 规范，成为浏览器和服务器通用的模块解决方案。
+
+
+
+1、CommonJS --> nodejs、webpack 同步
+2、esmodule --> es6 同步
+3、amd --> RequireJS 异步
+4、cmd --> Sea.js 异步
+5、umd
+
+system.js
+
