--- a/docs/002-前端/002-javascript/基础/定时器.md
+++ b/docs/002-前端/002-javascript/基础/定时器.md
@@ -5,7 +5,7 @@ setTimeout和setInterval的对比。
 ##### 相同点
 
 1. 第一个参数是cb代表的是回调函数callback，第二个代表的是时间，以ms计算，**第三个参数以后是cb的参数**
-2. 返回值都是一个整数用于取消定时器任务的执行。
+2. 返回值都是一个整数，用于取消定时器任务的执行。
 3. 实际的执行时间可能不会按照预期的时间执行。
 4. 回调函数this指向的是全局对象，除非bind了this。
 
@@ -29,6 +29,72 @@ setTimeout((a, b, c) => {
 
 
 
+```js
+/**
+ * 测试setTimeout的执行时间
+ */
+(function() {
+  const t1 = Date.now()
+  setTimeout(() => {
+    const t2 = Date.now()
+    // 理论上这里应该打印1000, 但是打印出来的值大于1000
+    // 打印1003，几乎和1000差不多
+    console.log(t2 - t1)
+  }, 1000)
+}())
+
+
+/**
+ * 测试当事件循环阻塞时setTimeout的执行时间
+ * 1. timer1和timer2几乎是同时执行的， 并没有间隔1000ms，这是因为事件循环被阻塞了，
+ * 导致两个定时器都没有在指定的时间点执行
+ * 2. timer4并没有受到影响。
+ */
+(function() {
+  const t1 = Date.now()
+
+  // timer1
+  setTimeout(() => {
+    const t2 = Date.now()
+    // 打印9454, 理论值是1000
+    console.log(t2 - t1)
+  }, 1000)
+
+  // timer2
+  setTimeout(() => {
+    const t2 = Date.now()
+    // 打印9454, 理论值是2000
+    console.log(t2 - t1)
+  }, 2000)
+
+    // timer3
+    setTimeout(() => {
+      const t2 = Date.now()
+      // 打印9454, 理论值是9400
+      console.log(t2 - t1)
+    }, 9400)
+
+    // timer4
+    setTimeout(() => {
+      const t2 = Date.now()
+      // 打印1005, 理论值是1000
+      console.log(t2 - t1)
+    }, 10000)
+
+
+  // 下面这段代码的执行时间大约9454
+  let sum = 0
+  for(let i=0; i<999999; i++) {
+    sum += i;
+    for(let i=0; i<9999; i++) {
+      sum += i;
+    }
+  }
+}())
+```
+
+
+
 ## setInterval的使用
 
 ```
@@ -45,19 +111,38 @@ setInterval((a, b, c) => {
 
 **setInterval执行的时间可能和预期的不一样。**
 
-- 第一个当执行时间小于100ms的时候
+```js
 
-![小于100ms](image/86cae25cc382badfe4eec7bd35f4ef39~tplv-t2oaga2asx-watermark.awebp)
+/**
+ * 测试setInterval
+ * 打印
+ * 1001
+ * 10457
+ * 19863
+ * 29256
+ * 38651
+ * 48055
+ * 
+ */
+(function() {
+  const t1 = Date.now()
 
-- 第二个大于100ms时，如150ms这样的在第二个周期之内
-  当执行完后他会立即触发第二次。
+  setInterval(() => {
+    const t2 = Date.now()
+    console.log(t2 - t1)
 
-![100ms～200ms之间](image/9146cb788bb357bdb62f3facc2c12613~tplv-t2oaga2asx-watermark.awebp)
+    // 下面这段代码的执行时间大约微9454
+    let sum = 0
+    for(let i=0; i<999999; i++) {
+      sum += i;
+      for(let i=0; i<9999; i++) {
+        sum += i;
+      }
+    }
+  }, 1000)
 
-- 那我们来看一下第三种情况，如500ms，远远大于100ms
-  其实根据setInterval的机制，他会抛弃掉中间所发生的，我们用图表来看一看就明白了。
-
-![远大于100ms](image/a6b701087bdae23192cfec76421e8ac0~tplv-t2oaga2asx-watermark.awebp)
+}())
+```
 
 
 
