--- a/docs/002-前端/002-javascript/基础/对象.md
+++ b/docs/002-前端/002-javascript/基础/对象.md
@@ -16,12 +16,18 @@
 **[[get]]**：读 默认undefined
 
 注意：
-访问器属性只能通过Object.defineProperty()定义。
-读访问器属性时，触发get()函数。
-写访问器属性时，触发set()函数。
+
+- 访问器属性只能通过Object.defineProperty()定义。
+- 读访问器属性时，触发get()函数。
+- 写访问器属性时，触发set()函数。
 
 作用：
- 可以用来监听访问器属性值的变化，并不能监听到属性的新增和删除。
+
+- 可以用来监听访问器属性值的变化，并**不能监听到属性的新增和删除**。
+
+
+
+
 
 
 # 2、定义属性
@@ -30,8 +36,8 @@
 作用：定义一个对象的属性，并且定义属性的特性。
 用法：必须有三个参数。
 
-（1）定义数据属性
-定义属性的同时，设置属性的特性。
+- 定义数据属性
+  定义属性的同时，设置属性的特性。
 
 ```js
     var person = {};
@@ -69,7 +75,7 @@
     });
 ```
 
-（2）定义访问器属性
+- 定义访问器属性
 
 ```js
     var book= {
@@ -119,7 +125,12 @@
     });
 ```
 
+
+
 # 3、创建对象的方式
+
+
+
 ## （1）对象字面量
 
 ```js
@@ -131,7 +142,13 @@
     };
 ```
 
+
+
 ## （2）工厂模式
+
+缺点： 
+
+- 创建的对象没有类型识别，因为都是Object类型。
 
 ```js
     function Person(name){
@@ -161,9 +178,17 @@
     Person("liu").sayName();
 ```
 
+
+
 ## （3）构造函数模式
 
-有对象类型,能有对象识别。
+优点
+
+- 有对象类型,能有对象识别。
+
+缺点
+
+- 对象实例之间不能共享数据和方法
 
 ```js
     function Person(name){
@@ -177,7 +202,10 @@
     p.sayName();//liu
 ```
 
+
+
 ## （4）原型模式
+
 - prototype：构造函数的属性，指向原型对象。
 - constructor：原型对象的属性，指向构造函数。 如果重写对象，则会改变这个指向。
 - 原型对象：**用于保存所有的实例对象共享的属性和方法**。
@@ -328,6 +356,12 @@ Person.prototype = {};
 ```js
 p1 instanceof Person
 ```
+
+
+
+> instanceof的原理？
+
+
 
 ## （2）isPrototypeOf()：
 
